test/fail/uninstantiated-self.grace
constructor ann {
  method annotateMethod(value) {}
}

method name is ann {}
